--- a/Exam2/src/main/webapp/index.html
+++ b/Exam2/src/main/webapp/index.html
@@ -6,12 +6,12 @@
     </head>
     <body>
         <h1>Email</h1>
-        <form action="NewServlet" method="post">
+<!--        <form action="NewServlet" method="post">
             <input type="text" name="email"><br>
             <input type="text" name="number1"><br>
             <input type="text" name="number2">
             <br>
         <input type="submit">
-        </form>
+        </form>-->
     </body>
 </html>
